force-app/main/default/objects/Menu_Access_Log__c/Menu_Access_Log__c.object-meta.xml
<CustomObject>
    <label>Menu Access Log</label>
    <nameField>
        <label>Menu Access Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Access Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>