force-app/main/default/objects/Menu_Access_Log__c/fields/AccessTime__c.field-meta.xml
<CustomField>
    <fullName>AccessTime__c</fullName>
    <label>Access Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>