force-app/main/default/objects/Menu_Access_Log__c/fields/AccessUser__c.field-meta.xml
<CustomField>
    <fullName>AccessUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Menu_Access_Log</relationshipName>
    <type>Lookup</type>
</CustomField>