force-app/main/default/objects/Menu_Access_Log__c/fields/MenuType__c.field-meta.xml
<CustomField>
    <fullName>MenuType__c</fullName>
    <label>Menu Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>