force-app/main/default/objects/Menu_Access_Log__c/fields/PageAppName__c.field-meta.xml
<CustomField>
    <fullName>PageAppName__c</fullName>
    <label>PageAppName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>