force-app/main/default/objects/Menu_Access_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PageAppName__c</columns>
    <columns>PageURL__c</columns>
    <columns>AccessTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>